# groupmemail

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  Vagrantfile  compose.yaml  docker-compose.yaml  docker-compose.yml  groupmemail.py  pyproject.toml  requirements-docker.txt  requirements.in  requirements.txt  run.py  services.py  supervisord.conf
.github/workflows/: build-and-deploy.yaml  build-container-image.yaml  build-latest-container-image.yaml  build-release-container-image.yaml  codeql-analysis.yaml  pip-compile-upgrade.yaml
ci/: gen-github-workflows.py  gen.py  ssh-deploy.sh
groupmemail/: config.py  db.py  groupme.py  groupmemail.py
groupmemail/static/: list.js  payment.js
groupmemail/templates/: base.html  email_expired.html  email_message.html  email_problem.html  landing.html  list.html  logged_in.html  payment.html
static/: groupme_list.css  groupme_list.js  list.js
templates/: base.html  charge.html  email_expired.html  email_problem.html  groupme_index.html  groupme_list.html  index.html  landing.html  list.html  logged_in.html  payment.html
