[project]
name = "groupmemail"
version = "2024.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
